# osh-vpn

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  build_cygwin.yml  build_linux.yml  build_msys2.yml  tests.yml  tests_linux.yml  unit_tests.yml
cmake/: compiler_flags.cmake  have_symbol.cmake  linker_flags.cmake  version_git.cmake
examples/: oshd.conf  pubkeys.conf
include/: aio.h  base64.h  bswap.h  client.h  device.h  device_mode.h  endianness.h  endpoints.h  events.h  hashtable.h  logger.h  macros.h  macros_assert.h  macros_bitfields.h  macros_windows.h  memzero.h  murmurhash.h  netaddr.h  netarea.h  netbuffer.h  netpacket.h  netroute.h  netutil.h  node.h  oshd.h  oshd_clock.h  oshd_cmd.h  oshd_conf.h  oshd_device.h  oshd_device_mode.h  oshd_discovery.h  oshd_process_packet.h  oshd_resolver.h  oshd_route.h  oshd_script.h  oshd_socket.h  oshpacket.h  oshpacket_handlers.h  random.h  signals.h  (+8 more)
include/buffer/: fixedbuf.h
include/crypto/: cipher.h  common.h  hash.h  hkdf.h  keypair.h  pkey.h  sha3.h
include/easyconf/: easyconf.h  getline.h
include/netdefs/: arp.h  ether.h  ethertypes.h  icmp.h  ip.h
include/netutil/: arp.h  icmp.h  icmp_nd.h
include/noise/: cipherstate.h  constants.h  crypto_table.h  handshakestate.h  patterns_table.h  protocol_name.h  symmetricstate.h
include/tuntap/: wintun.h
src/: aio.c  base64.c  client.c  client_state_exchange.c  device.c  device_mode.c  endpoints.c  events.c  hashtable.c  hashtable_murmur3_32.c  hashtable_netaddr.c  logger.c  macros_windows.c  main.c  memzero.c  murmurhash.c  netaddr.c  netbuffer.c  netpacket.c  netroute.c  node.c  oshd.c  oshd_clock.c  oshd_cmd.c  oshd_conf.c  oshd_device.c  oshd_device_mode.c  oshd_discovery.c  oshd_process_packet.c  oshd_resolver.c  oshd_route.c  oshd_script.c  oshd_socket.c  oshpacket.c  random.c  random_xoshiro256.c  signals.c  signals_callbacks.c  sock.c  tcp.c  (+3 more)
src/aio/: aio.c  epoll.c  poll.c  windows.c
src/crypto/: cipher.c  hash.c  hkdf.c  keypair.c  pkey.c  sha3.c
src/easyconf/: easyconf.c  getline.c  parameter.c
src/events/: automatic_connections.c  connect.c  dynamic_ip_conflict.c  expire_endpoints.c  expire_local_routes.c  expire_remote_routes.c  expire_routes.c  expire_routes_refresh.c  expire_seen_brd_ids.c  handshake_renew.c  handshake_timeout.c  keepalive.c  node_auth_timeout.c  periodic_ping.c
src/netutil/: arp.c  icmp.c  icmp_nd.c
src/noise/: cipherstate.c  crypto_table.c  handshakestate.c  patterns_table.c  protocol_name.c  symmetricstate.c
src/oshpacket_handlers/: data.c  devmode.c  edge.c  endpoint.c  goodbye.c  handshake.c  handshake_end.c  handshake_sig.c  hello.c  ping_pong.c  pubkey.c  route.c  stateexg_end.c
src/tuntap/: common.c  dummy.c  linux.c  tap-windows.c  tun_emu.c  windows.c  wintun.c
systemd/: osh@.service.in
tests/: base64_tests.c  device_mode_tests.c  hashtable_tests.c  macros_bitfield_tests.c  memzero_tests.c  netaddr_tests.c  netbuffer_tests.c  netroute_tests.c  node_id_tests.c  oshd_device_mode_tests.c  oshpacket_tests.c  random_tests.c  test.conf
tests/crypto/: cipher_tests.c  keypair_tests.c
tests/easyconf/: easyconf_tests.c  getline_tests.c  parameter_tests.c
tests/noise/: check_test_vectors.py  noise_test_handshake.c  unit_tests.c
